--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		
+		<script src="init.js" data-main="dig"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
