Add icon and title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/index.css" />
+		<link rel="icon" href="sprite/tile/explosives.png" />
+		<title>Dig Dig Dig | by Chirichirichiri</title>
 	</head>
 	<body>
 		<script src="init.js" data-main="dig"></script>
