Hires icon so it doesn't get broken

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="Dig Dig Dig &nbsp;| &nbsp;by Chirichirichiri"/>
 		<meta property="og:description" content="There's gold in these hills! The motherlode that must be in the centre of the earth. You've created a new mining company — it's riches or bust!"/>
 		<meta property="og:url" content="https://chiri.works/dig/"/>
-		<meta property="og:image" content="https://chiri.works/dig/sprite/tile/explosives.png"/>
+		<meta property="og:image" content="https://chiri.works/dig/icon.png"/>
 	</head>
 	<body>
 		<script src="init.js" data-main="dig"></script>
