--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<link rel="icon" href="sprite/tile/explosives.png" />
 		<title>Dig Dig Dig &nbsp;| &nbsp;by Chirichirichiri</title>
-		<meta name="description" content="There's gold in these hills! The motherlode that must be in the centre of the earth. You've created a new mining company — it's riches or bust!"/>
+		<meta name="description" content="There's gold in these hills! There must be a motherlode in the centre of the earth, you can feel it in your bones... You've created a new mining company — it's riches or bust!"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:title" content="Dig Dig Dig &nbsp;| &nbsp;by Chirichirichiri"/>
-		<meta property="og:description" content="There's gold in these hills! The motherlode that must be in the centre of the earth. You've created a new mining company — it's riches or bust!"/>
+		<meta property="og:description" content="There's gold in these hills! There must be a motherlode in the centre of the earth, you can feel it in your bones... You've created a new mining company — it's riches or bust!"/>
 		<meta property="og:url" content="https://chiri.works/dig/"/>
 		<meta property="og:image" content="https://chiri.works/dig/icon.png"/>
 	</head>
