--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
 	<body>
 		<script src="init.js" data-main="dig"></script>
 		<script src="js/index.js"></script>
+		<aside>
+			<h1>Dig Dig Dig</h1>
+			<ul>
+				<li><a href="https://ldjam.com/events/ludum-dare/48/dig-dig-dig">An entry to Ludum Dare 48 (<b>Deeper and deeper</b>)</a></li>
+				<li><a href="https://chiri.works">My personal site</a></li>
+				<li><a href="https://www.twitter.com/ChiriMystere">My twitter</a></li>
+			</ul>
+			<button onclick="this.parentElement.remove()">Dismiss</button>
+		</aside>
 	</body>
 </html>
